# ha-intelligent-load-controller

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  hacs.json  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  frontend.yml  release-check.yml  release.yml  validate.yml
custom_components/intelligent_load_controller/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  migrations.py  number.py  panel.py  repairs.py  schema.py  select.py  sensor.py  services.py  services.yaml  storage.py  switch.py  system_health.py  websocket_api.py
docs/: BRAND_ASSETS.md  CONTROL_MODEL.md  DEPENDENCY_REVIEW.md  EXTERNAL_PREREQUISITES.md  FRONTEND_UX_SPECIFICATION.md  IMPLEMENTATION_STATUS.md  PRODUCT_SPECIFICATION.md  ROADMAP.md  TEST_PLAN.md  TRACEABILITY_MATRIX.md
docs/release/: RELEASE_EVIDENCE_TEMPLATE.md
docs/ux/: backend-presentation-gap-analysis.md  current-ui-inventory.md  design-system.md  gap-analysis.md  information-architecture.md  phase-0-report.md  phase-1-shell-report.md  phase-2-overview-report.md  reference-benchmark.md  user-journeys.md  wireframes.md
examples/home-assistant/: configuration.yaml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: harness.ts  panel.a11y.spec.ts  production-bundle.spec.ts
frontend/src/: index.ts
frontend/tests/: format.test.ts  home-status-hero.test.ts  load-card-presentation.test.ts  load-catalogue.test.ts  load-control-api.test.ts  panel.test.ts  (+3 more)
scripts/: _common.sh  bootstrap  brand_assets.py  build-frontend  lint  release-check  run-ha-dev  run-simulation  run_simulation.py  sync-brand-assets  test  test-backend  test-frontend  validate-brand-assets  validate-frontend-bundle  verify-release-version
tests/: conftest.py  test_brand_assets.py
(+83 files in other folders)
