[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-intelligent-load-controller"
version = "0.1.0"
description = "Local Home Assistant integration for coordinated flexible-load control"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Intelligent Load Controller maintainers" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "homeassistant==2025.4.0",
  "hypothesis==6.160.0",
  "mypy==1.15.0",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "pytest-cov==6.0.0",
  "pytest-homeassistant-custom-component==0.13.232",
  "ruff==0.11.7",
]

[tool.setuptools]
# HACS installs the integration as files under custom_components; it is not a
# PyPI package. Leaving this empty prevents editable-install import hooks from
# polluting Home Assistant's custom-component discovery path during tests.
packages = []

[tool.coverage.run]
branch = true
source = ["custom_components/intelligent_load_controller"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
  ".cache",
  ".venv",
  "custom_components/intelligent_load_controller/frontend/dist",
  "frontend/node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
files = ["custom_components", "tests", "scripts"]
exclude = ["custom_components/intelligent_load_controller/frontend/dist", "frontend/node_modules"]
explicit_package_bases = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
ignore_missing_imports = true
